Trying to fix insta icon spacing

--- a/site.css
+++ b/site.css
@@ -148,8 +148,6 @@ footer {
 
 .insta_icon {
   width: 22px;
-  padding: 1px;
-  margin-bottom: 2%;
 }
 
 
